--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="Register_create_account">Create account</string>
     <string name="Register_password">Password</string>
     <string name="Register_nickname">Nickname</string>
+    <string name="btnSave">Save</string>
 </resources>
