--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="Register_password">Password</string>
     <string name="Register_nickname">Nickname</string>
     <string name="btnSave">Save</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="changed_server">Server</string>
 </resources>
